# deeplang-type-system

./: .gitignore  BASHME.sh  DeeplangType.ml  Makefile  RAEDME.md  README.md  deeplang.cf  deeplang.testcase  dune  flake.nix  shell.nix  test.ml
IR/: ANF.ml  Conversion.ml  ConvertMatch.ml  Playground.ml  dune
IR/test/: ConversionTest.ml  basic.dp  breakContinue.dp  controlFlow.dp  dune  expr.dp  match.dp  test.expected
Semantics/: ANF.ml  Context.ml  Helper.ml  PatExhChecker.ml  Playground.ml  README.md  SemanticsError.ml  StrDelResolver.ml  Table.ml  TypExistChecker.ml  Walker.ml  WalkerTest.ml  dune
Semantics/test/: WalkerTest.ml  delegate.dp  dune  expression.dp  expression2.dp  test.dp  test.expected  type.dp  used_func1.dp  used_var3.dp  used_var4.dp
Semantics/test/expression/: ADThasNoFields.dp  arithmeticOnErrorType.dp  errorEqualing.dp  errorIfCondition.dp  errorIfReturn.dp  errorInterface.dp  errorLogicalOpType.dp  errorLogicalOpType2.dp  errorMatchStruct.dp  errorOrdering.dp  errorOrderingType.dp  errorUnequaling.dp  errorUsingADT.dp  expression1.dp  expression2.dp  if1.dp  modOnDifferentTypes.dp  modOnErrorType.dp  negativeNaN.dp  notNaB.dp  shiftNaNbits.dp  shiftNonInt.dp  structFieldNotFound.dp  structTypeNotFound.dp
Semantics/test/function/: used_func1.dp
Semantics/test/pattern/: bad_pattern1.dp  patVatTypeMismatch1.dp  patVatTypeMismatch2.dp
Semantics/test/statements/: bad_assign1.dp  bad_assign2.dp  bad_assign3.dp  bad_assign4.dp  bad_assign5.dp  bad_break1.dp  bad_break2.dp  bad_break3.dp  bad_continue1.dp  bad_continue2.dp  bad_if.dp  bad_return1.dp  bad_return2.dp  bad_while.dp
Semantics/test/type/: unsupport_type1.dp  unsupport_type2.dp  used_var1.dp  used_var2.dp  used_var4.dp
Syntax/: Lexer.mll  ParseTree.ml  Parser.mly  ParserTest.ml  README.md  SyntaxError.ml  dune
Syntax/test/: interface.dp  parser.dp  patternMatching.dp  types.dp
Syntax/test/expressions/: bad_binary_op.dp  bad_binary_op2.dp  bad_field_access.dp  bad_field_access2.dp  bad_method_access.dp  bad_method_access2.dp  bad_struct_field.dp  bad_struct_field2.dp  bad_unary_op.dp  bad_unary_op2.dp  bad_unary_op3.dp  cons_no_args.dp  mismatched_brack.dp  mismatched_parens.dp  mismatched_parens2.dp  mismatched_parens3.dp
Syntax/test/others/: bad_adt_branch_name.dp  bad_impl_name.dp  bad_impl_name2.dp  bad_interface_name.dp  func_impl_without_rbrace.dp  function_decl_args_without_comma.dp  missing_function_decl_arg.dp  missing_type.dp  missing_type2.dp  missing_type3.dp  missing_type4.dp  missing_type5.dp  missing_type6.dp  mutiple_type.dp  mutiple_type_mut.dp  unknown_type.dp
Syntax/test/patterns/: bad_match_branch1.dp  bad_match_branch2.dp  bad_match_pattern.dp  bad_pattern.dp  bad_pattern_ADT.dp  bad_pattern_struct1.dp  bad_pattern_struct2.dp  bad_variable_pattern1.dp  bad_variable_pattern2.dp  multiple_patterns.dp  unclosed_brace1.dp  unclosed_brace2.dp  unclosed_paren1.dp  unclosed_paren2.dp
Syntax/test/statements/: bad_assignment1.dp  bad_assignment2.dp  bad_for1.dp  bad_for2.dp  bad_let1.dp  bad_let2.dp  missing_Lparen1.dp  missing_Lparen2.dp  missing_Lparen3.dp  missing_Rbrace.dp  missing_Rparen1.dp  missing_Rparen2.dp  missing_Rparen3.dp  missing_if1.dp  missing_if2.dp  missing_semicolon1.dp  missing_semicolon2.dp  missing_semicolon3.dp  missing_semicolon4.dp  missing_semicolon5.dp  missing_semicolon6.dp  no_exp1.dp  no_exp2.dp  no_exp3.dp  no_exp4.dp
doc/: Cachesscoping-discussion.md  Deeplang-spec.md  WebAssembly.md  deeplang-spec.md  deeplang_frontend_discuss.md  mm-doc.md  mm-impl-doc.md  simple-ANF.md  simple-compiler.md  typecheck.md  walker.md
doc/internal/: index.html
doc/internal/DeeplangType@26bb1931b3ad/DeeplangType/: index.html
doc/internal/Parser@26bb1931b3ad/Parser/: index.html
doc/internal/Parser@26bb1931b3ad/Parser__/: index.html
doc/internal/Parser@26bb1931b3ad/Parser__/ParseError/: index.html
doc/internal/Parser@26bb1931b3ad/Parser__/ParseTree/: index.html
doc/internal/Parser@26bb1931b3ad/Parser__ParseError/: index.html
doc/internal/Parser@26bb1931b3ad/Parser__ParseTree/: index.html
doc/internal/Semantics@26bb1931b3ad/Semantics/: index.html
doc/internal/Semantics@26bb1931b3ad/Semantics__ANF/: index.html
doc/internal/Semantics@26bb1931b3ad/Semantics__Helper/: index.html
doc/internal/Semantics@26bb1931b3ad/Semantics__Table/: index.html
doc/internal/Semantics@26bb1931b3ad/Semantics__Walker/: index.html
doc/internal/Syntax@26bb1931b3ad/Syntax/: index.html
doc/internal/Syntax@26bb1931b3ad/Syntax__Lexer/: index.html
doc/internal/Syntax@26bb1931b3ad/Syntax__ParseError/: index.html
doc/internal/Syntax@26bb1931b3ad/Syntax__ParseTree/: index.html
doc/internal/Syntax@26bb1931b3ad/Syntax__Parser/: index.html
doc/internal/Syntax@26bb1931b3ad/Syntax__SyntaxError/: index.html
doc/internal/deeplangType@26bb1931b3ad/DeeplangType/: index.html
doc/internal/deeplangType@26bb1931b3ad/DeeplangType__ParseTree/: index.html
examples/: basicMain.dp  controlFlow.dp  example.dp  patternMatching.dp  structAndADT.dp
parser/: AST.ml  AbsDeeplang.ml  BNFC_Util.ml  LexDeeplang.ml  LexDeeplang.mll  ParDeeplang.ml  ParDeeplang.mli  ParDeeplang.mly  ParseTree.ml  PrintDeeplang.ml  README.md  ShowDeeplang.ml  SkelDeeplang.ml  TestDeeplang  TestDeeplang.ml  build.sh  deeplang.cf  dune  dune-project  log.md  test.sh
parser/output/: AbsDeeplang.cmi  AbsDeeplang.cmo  AbsDeeplang.ml  BNFC_Util.cmi  BNFC_Util.cmo  LexDeeplang.cmi  LexDeeplang.cmo  LexDeeplang.ml  LexDeeplang.mll  Makefile  ParDeeplang.cmi  ParDeeplang.cmo  ParDeeplang.ml  ParDeeplang.mli  ParDeeplang.mly  PrintDeeplang.cmi  PrintDeeplang.cmo  PrintDeeplang.ml  ShowDeeplang.cmi  ShowDeeplang.cmo  ShowDeeplang.ml  SkelDeeplang.cmi  SkelDeeplang.cmo  SkelDeeplang.ml  TestDeeplang  TestDeeplang.cmi  TestDeeplang.cmo  TestDeeplang.ml
parser/test/: basicMain.dp  controlFlow.deeplang  controlFlow.dp  dune  interface.dp  patternMatching.dp  structAndADT.dp  types.dp
table/: README.md  Walker.ml  example.ml  name_resolute.ml
test/: example.dp  structAndADT.dp  types.dp
(+21 files in other folders)
