(library
    (name Semantics)
    (libraries Syntax)
    (modules Table Helper Walker SemanticsError)
    )

(test
    (name WalkerTest)
    (libraries Syntax Semantics)
    (deps 
        (file test/type.dp)
        (file test/test.dp)
        (file test/type/unsupport_type1.dp)
        (file test/type/unsupport_type2.dp)
        (file test/pattern/bad_pattern1.dp)
        (file test/expression/expression1.dp)
        (file test/expression/expression2.dp)
        (file test/function/used_func1.dp)
        (file test/used_var1.dp)
        (file test/used_var2.dp)
        (file test/used_var3.dp)
        (file test/used_var4.dp)
    )
    (modules WalkerTest)
    )