(library
    (name Semantics)
    (libraries Syntax)
    (modules Table Helper Walker SemanticsError)
    )

(test
    (name WalkerTest)
    (libraries Syntax Semantics)
    (deps 
        (file test/type.dp)
        (file test/test.dp)
        (file test/type/unsupport_type1.dp)
        (file test/type/unsupport_type2.dp)
        (file test/type/used_var1.dp)
        (file test/type/used_var2.dp)
        (file test/type/used_var3.dp)
        (file test/type/used_var4.dp)
        (file test/pattern/bad_pattern1.dp)
        (file test/pattern/patVatTypeMismatch1.dp)
        (file test/pattern/patVatTypeMismatch2.dp)
        (file test/expression/expression1.dp)
        (file test/expression/expression2.dp)
        (file test/function/used_func1.dp)
        (file test/statements/bad_assign1.dp)
        (file test/statements/bad_assign2.dp)
        (file test/statements/bad_assign3.dp)
        (file test/statements/bad_assign4.dp)
        (file test/statements/bad_break1.dp)
        (file test/statements/bad_break2.dp)
        (file test/statements/bad_continue1.dp)
        (file test/statements/bad_continue2.dp)
        (file test/statements/bad_return1.dp)
        (file test/statements/bad_return2.dp)
        (file test/statements/bad_if.dp)
        (file test/statements/bad_while.dp)
    )
    (modules WalkerTest)
    )