(library
    (name Semantics)
    (libraries Syntax)
    (modules Table Helper Walker SemanticsError)
    )
(library
    (name Semantics)
    (libraries Syntax)
    (modules Table Helper Walker SemanticsError)
    )

(test
    (name WalkerTest)
    (libraries Syntax Semantics)
    (deps 
        (file test/type.dp)
        (file test/type/unsupport_type1.dp)
        (file test/type/unsupport_type2.dp)
        (file test/type/used_var1.dp)
        (file test/type/used_var2.dp)
        (file test/type/used_var3.dp)
        (file test/type/used_var4.dp)
        (file test/pattern/bad_pattern1.dp)
        (file test/pattern/patVatTypeMismatch1.dp)
        (file test/pattern/patVatTypeMismatch2.dp)
        (file test/expression/expression1.dp)
        (file test/expression/expression2.dp)
        (file test/function/used_func1.dp)
        (file test/expression/negativeNaN.dp)
        (file test/expression/notNaB.dp)
        (file test/expression/errorOrdering.dp)
        (file test/expression/errorEqualing.dp)
        (file test/expression/errorUnequaling.dp)
        (file test/expression/errorOrderingType.dp)
        (file test/expression/errorLogicalOpType.dp)
        (file test/expression/errorLogicalOpType2.dp)
        (file test/expression/shiftNonInt.dp)
        (file test/expression/shiftNaNbits.dp)
        (file test/expression/arithmeticOnErrorType.dp)
        (file test/expression/modOnErrorType.dp)
        (file test/expression/modOnDifferentTypes.dp)
        (file test/expression/ADThasNoFields.dp)
        (file test/expression/structFieldNotFound.dp)
        (file test/expression/structTypeNotFound.dp)
        (file test/expression/errorUsingADT.dp)
        (file test/expression/errorIfReturn.dp)
        (file test/expression/errorIfCondition.dp)
        (file test/expression/errorMatchStruct.dp)
        (file test/expression/errorInterface.dp)
        (file test/statements/bad_assign1.dp)
        (file test/statements/bad_assign2.dp)
        (file test/statements/bad_assign3.dp)
        (file test/statements/bad_assign4.dp)
        (file test/statements/bad_break1.dp)
        (file test/statements/bad_break2.dp)
        (file test/statements/bad_continue1.dp)
        (file test/statements/bad_continue2.dp)
        (file test/statements/bad_return1.dp)
        (file test/statements/bad_return2.dp)
        (file test/statements/bad_if.dp)
        (file test/statements/bad_while.dp)
    )
    (modules WalkerTest)
    )