(library
 (name Syntax)
 (modules ParseTree SyntaxError Parser Lexer))

(ocamlyacc Parser)
(ocamllex  Lexer)


(test
 (name ParserTest)
 (libraries Syntax)
 (deps (file test/parser.dp) (file test/types.dp) ; correct test examples
       
      ;  (file test/expressions/cons_no_args.dp)
      ;  (file test/expressions/bad_struct_field.dp)
      ;  (file test/expressions/bad_struct_field2.dp)
      ;  (file test/expressions/bad_unary_op.dp)
      ;  (file test/expressions/bad_unary_op2.dp)
      ;  (file test/expressions/bad_unary_op3.dp)
      ;  (file test/expressions/bad_field_access.dp)
      ;  (file test/expressions/bad_field_access2.dp)
      ;  (file test/expressions/bad_method_access.dp)
      ;  (file test/expressions/bad_method_access2.dp)
      ;  (file test/expressions/bad_binary_op.dp)
      ;  (file test/expressions/bad_binary_op2.dp)
       
       (file test/patterns/bad_match_pattern.dp))
 (modules ParserTest))
