(library
 (name Syntax)
 (modules ParseTree SyntaxError Parser Lexer))

(ocamlyacc Parser)
(ocamllex  Lexer)


(test
 (name ParserTest)
 (libraries Syntax)
 (deps (file test/parser.dp) (file test/types.dp)
       (file test/expressions/cons_no_args.dp)
       (file test/expressions/bad_struct_field.dp)
       (file test/expressions/bad_struct_field2.dp)
       (file test/expressions/bad_unary_op.dp)
       (file test/expressions/bad_unary_op2.dp)
       (file test/expressions/bad_unary_op3.dp)
       (file test/expressions/bad_field_access.dp)
       (file test/expressions/bad_field_access2.dp)
       (file test/expressions/bad_method_access.dp)
       (file test/expressions/bad_method_access2.dp)
       (file test/expressions/bad_binary_op.dp)
       (file test/expressions/bad_binary_op2.dp)
       (file test/expressions/mismatched_parens.dp)
       (file test/expressions/mismatched_parens2.dp)
       (file test/expressions/mismatched_parens3.dp)
       (file test/expressions/mismatched_brack.dp)
       (file test/patterns/bad_match_branch1.dp)
       (file test/patterns/bad_match_branch2.dp)
       (file test/patterns/bad_pattern_ADT.dp)
       (file test/patterns/bad_pattern_struct1.dp)
       (file test/patterns/bad_pattern_struct2.dp)
       (file test/patterns/bad_variable_pattern1.dp)
       (file test/patterns/bad_variable_pattern2.dp)
       (file test/patterns/multiple_patterns.dp)
       (file test/patterns/unclosed_brace1.dp)
       (file test/patterns/unclosed_brace2.dp)
       (file test/patterns/unclosed_paren1.dp)
       (file test/patterns/unclosed_paren2.dp)
       (file test/statements/missing_if1.dp)
       (file test/statements/missing_if2.dp)
       (file test/statements/missing_semicolon1.dp)
       (file test/statements/missing_semicolon2.dp)
       (file test/statements/missing_semicolon3.dp)
       (file test/statements/missing_semicolon4.dp)
       (file test/statements/missing_semicolon5.dp)
       (file test/statements/missing_semicolon6.dp)
       (file test/statements/bad_assignment1.dp)
       (file test/statements/bad_assignment2.dp)
       (file test/statements/no_exp1.dp)
       (file test/statements/no_exp2.dp)
       (file test/statements/no_exp3.dp)
       (file test/statements/no_exp4.dp)
       (file test/statements/missing_Lparen1.dp)
       (file test/statements/missing_Lparen2.dp)
       (file test/statements/missing_Lparen3.dp)
       (file test/statements/missing_Rparen1.dp)
       (file test/statements/missing_Rparen2.dp)
       (file test/statements/missing_Rparen3.dp)
       (file test/statements/missing_Rbrace.dp)
       (file test/statements/bad_for1.dp)
       (file test/statements/bad_for2.dp)
       (file test/statements/bad_let1.dp)
       (file test/statements/bad_let2.dp)
       (file test/others/missing_type.dp)
       (file test/others/missing_type2.dp)
       (file test/others/missing_type3.dp)
       (file test/others/missing_type4.dp)
       (file test/others/missing_type5.dp)
       (file test/others/missing_type6.dp)
       (file test/others/missing_function_decl_arg.dp)
       (file test/others/bad_adt_branch_name.dp)
       )
 (modules ParserTest))
